Updated Graph design
